# hw_modul_6_1

./: .env.example  README.md  category_fixture.json  products_fixture.json  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_category_description_and_more.py  0003_alter_product_category_alter_product_image_and_more.py
catalog/templates/: contacts.html  home.html
config/: settings.py  urls.py
